--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1 id="islam">shahidul islam shohid</h1>
-    <h1 id="islam">khadash rajbary</h1>
+    <h1 class="islam">khadash rajbary</h1>
+    <h1 class="islam">khadash islam</h1>
+    <h1 class="islam">khadash ahmed</h1>
+    <h1 class="islam">khadash rahman</h1>
+
+    <script src="script.js"></script>
 </body>
 </html>
