i am learning dom tag

--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="islam">shahidul islam shohid</h1>
-    <h1 class="islam">khadash rajbary</h1>
-    <h1 class="islam">khadash islam</h1>
-    <h1 class="islam">khadash ahmed</h1>
-    <h1 class="islam">khadash rahman</h1>
+    <div>
+        <p class="islam">shahidul1</p>
+        <p class="islam">shahidul2</p>
+        <p class="islam">shahidul3</p>
+        <p class="islam">shahidul4</p>
+        <p class="islam">shahidul5</p>
+        <p class="islam">shahidul6</p>
+    </div>
+    <ul id="ulid">
+        <li class="islam">shahidul 1</li>
+        <li class="islam">shahidul 2</li>
+        <li class="islam">shahidul 3</li>
+        <li class="islam">shahidul 4</li>
+        <li class="islam">shahidul 5</li>
+        <li class="islam">shahidul 6</li>
+    </ul>
 
     <script src="script.js"></script>
 </body>
