dom some practice is done

--- a/index.html
+++ b/index.html
@@ -7,22 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <p class="islam">shahidul1</p>
-        <p class="islam">shahidul2</p>
-        <p class="islam">shahidul3</p>
-        <p class="islam">shahidul4</p>
-        <p class="islam">shahidul5</p>
-        <p class="islam">shahidul6</p>
+    <div class="grandParent">
+        <h1>shahidul islam shohid</h1>
+        <ul class="parent">
+            <li class="children">children 1</li>
+            <li class="children">children 2</li>
+            <li class="children">children 3</li>
+            <li class="children">children 4</li>
+            <li class="children">children 5</li>
+            <li class="children">children 6</li>
+        </ul>
     </div>
-    <ul id="ulid">
-        <li class="islam">shahidul 1</li>
-        <li class="islam">shahidul 2</li>
-        <li class="islam">shahidul 3</li>
-        <li class="islam">shahidul 4</li>
-        <li class="islam">shahidul 5</li>
-        <li class="islam">shahidul 6</li>
-    </ul>
 
     <script src="script.js"></script>
 </body>
