input control by dom

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="grandParent">
-        <h1>shahidul islam shohid</h1>
+        <h1 id="header">shahidul islam shohid</h1>
         <ul class="parent">
             <li class="children">children 1</li>
             <li class="children">children 2</li>
@@ -17,6 +17,14 @@
             <li class="children">children 5</li>
             <li class="children">children 6</li>
         </ul>
+    </div>
+    <div class="mouse">
+        <h1 style="background-color: red;
+        width: 200px; height: 50px;">this is heading</h1>
+    </div>
+
+    <div class="container">
+        <input type="text" name="" id="">
     </div>
 
     <script src="script.js"></script>
