dom some practice done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     </div>
 
     <div class="container">
-        <input type="text" name="" id="">
+        <form action="">
+            <input type="text" name="" id="">
+            <input type="submit" value="add task">
+        </form>
     </div>
 
     <script src="script.js"></script>
